# test-gpt-fps

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml
Assets/Materials/: M_PaintBlit.mat
Assets/Scripts/: BallLauncher.cs  GameInstaller.cs  ImpactImpulse.cs  MinimalFPSController.cs  PaintGun.cs  PaintProjectile.cs  Paintable.cs
Assets/Shaders/: RT_DrawCircle.shader  URP_PaintableShader.shader
scripts/: __init__.py  import_epub.py  import_pdf.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  dict.rs  main.rs  piper.rs  ssml.rs
src-tauri/src/cmds/: mod.rs
tests/: test_importers.py
ui/: .eslintrc.cjs  package.json  tsconfig.json  vite.config.ts
ui/src/: App.svelte  app.css
ui/src/lib/: types.ts
ui/src/lib/components/: Controls.svelte  Importer.svelte  QueueList.svelte  SettingsPanel.svelte
ui/src/lib/stores/: queue.ts
ui/tests/: queue.test.ts
