[package]
name = "voice-mvp"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.10"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
quick-xml = { version = "0.31", features = ["serialize"] }
tauri = { version = "1.5", features = ["api-all"] }
async-process = "1"
walkdir = "2"
dirs = "5"
which = "5"
async-std = { version = "1.12", features = ["attributes"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
serde_json = "1"
